Add LICENSE and README.

--- a/app.json
+++ b/app.json
@@ -6,4 +6,5 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/spl
+      "image": "./assets/splash.png",
+      "re
