Ignoring .DS_Store files

--- a/app.json
+++ b/app.json
@@ -13,4 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatte
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "io
