tty: Prevent deadlock in n_gsm driver

--- a/app.json
+++ b/app.json
@@ -22,4 +22,4 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
-    
+        "backgroundColor": "#000000"
