--- a/app.json
+++ b/app.json
@@ -23,3 +23,5 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#000000"
+      },
+      "package": "co
