uid_cputime: Avoids double accounting of process stime, utime and cpu_power in task exit.

--- a/app.json
+++ b/app.json
@@ -24,4 +24,5 @@
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#000000"
       },
-      "package": "co
+      "package": "com.edz.CoinFeed",
+      "versionC
