--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
   "name": "coinfeed",
   "version": "1.0.0",
-  "main": "node_modules/expo/
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    
