--- a/package.json
+++ b/package.json
@@ -4,4 +4,5 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start -
+    "android": "expo start --android",
+    "ios": "expo start
