--- a/package.json
+++ b/package.json
@@ -5,4 +5,5 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start
+    "ios": "expo start --ios",
+    "web": "expo start --we
