--- a/package.json
+++ b/package.json
@@ -6,4 +6,5 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --we
+    "web": "expo start --web",
+    "eject": "expo eject"
