--- a/package.json
+++ b/package.json
@@ -11,4 +11,5 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-navigation/drawer": "^6.3
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/nat
