--- a/package.json
+++ b/package.json
@@ -14,4 +14,4 @@
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "date-fns": "^2.28.0",
-  
+    "expo": "~44.0.0",
