--- a/package.json
+++ b/package.json
@@ -15,4 +15,5 @@
     "@react-navigation/native": "^6.0.8",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
-    "expo-app-loading": 
+    "expo-app-loading": "~1.3.0",
+    "expo-haptics":
