--- a/package.json
+++ b/package.json
@@ -16,4 +16,5 @@
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
-    "expo-haptics":
+    "expo-haptics": "~11.1.0",
+    "expo-linear-gradie
