--- a/package.json
+++ b/package.json
@@ -17,4 +17,5 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-haptics": "~11.1.0",
-    "expo-linear-gradie
+    "expo-linear-gradient": "~11.0.3",
+    "expo-statu
