--- a/package.json
+++ b/package.json
@@ -18,4 +18,5 @@
     "expo-app-loading": "~1.3.0",
     "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "~11.0.3",
-    "expo-statu
+    "expo-status-bar": "~1.2.0",
+    "
