--- a/package.json
+++ b/package.json
@@ -19,4 +19,4 @@
     "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
-    "
+    "expo-updates": "~0.11.7",
