--- a/package.json
+++ b/package.json
@@ -20,3 +20,4 @@
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
+    "expo-web-browser": "~
