--- a/package.json
+++ b/package.json
@@ -20,4 +20,5 @@
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
-    "expo-web-browser": "~
+    "expo-web-browser": "~10.1.0",
+    "mobx": "^6
