--- a/package.json
+++ b/package.json
@@ -21,4 +21,5 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
-    "mobx": "^6
+    "mobx": "^6.3.13",
+    "mobx-react-lite": "^
