--- a/package.json
+++ b/package.json
@@ -25,4 +25,5 @@
     "mobx-react-lite": "^3.2.3",
     "react": "17.0.1",
     "react-content-loader": "^6.1.0",
-    "r
+    "react-dom": "17.0.1",
+    "react
