Remove unused code

--- a/package.json
+++ b/package.json
@@ -26,4 +26,5 @@
     "react": "17.0.1",
     "react-content-loader": "^6.1.0",
     "react-dom": "17.0.1",
-    "react
+    "react-native": "0.64.3",
+    "react-nati
