--- a/package.json
+++ b/package.json
@@ -28,3 +28,4 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-draggable-flatlist": "^3.0.6",
+    "react-native-gesture-handler
