--- a/package.json
+++ b/package.json
@@ -28,4 +28,5 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-draggable-flatlist": "^3.0.6",
-    "react-native-gesture-handler
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated"
