--- a/package.json
+++ b/package.json
@@ -29,4 +29,5 @@
     "react-native": "0.64.3",
     "react-native-draggable-flatlist": "^3.0.6",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated"
+    "react-native-reanimated": "~2.3.1",
+    "react-na
