coding style tweaks

--- a/package.json
+++ b/package.json
@@ -30,4 +30,5 @@
     "react-native-draggable-flatlist": "^3.0.6",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-scre
