--- a/package.json
+++ b/package.json
@@ -31,4 +31,5 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-scre
+    "react-native-screens": "~3.10.1",
+    "react-nati
