Fix rubocop offense

--- a/package.json
+++ b/package.json
@@ -32,4 +32,5 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-nati
+    "react-native-svg": "^12.1.1",
+    "react-nat
