--- a/package.json
+++ b/package.json
@@ -33,4 +33,5 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.1.1",
-    "react-nat
+    "react-native-web": "0.17.1"
+  },
