--- a/package.json
+++ b/package.json
@@ -38,4 +38,5 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/ramda": "^0.27.64",
-    "@types/react": "~17.0.21
+    "@types/react": "~17.0.21",
+    "@types/react-native
