--- a/package.json
+++ b/package.json
@@ -41,4 +41,6 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "ramda": "^0.28.0",
-    "typescript
+    "typescript": "~4.3.5"
+  },
+  "private": 
