--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "experimentalDecorators"
+    "experimentalDecorators": true,
+    "strict": true
+  
